[profile.release-with-debug]
inherits = "release"
debug = true
split-debuginfo = "packed"

[workspace]
members = [
    "account-decoder",
    "accounts-bench",
    "accounts-cluster-bench",
    "accounts-db",
    "accounts-db/store-tool",
    "banking-bench",
    "banks-client",
    "banks-interface",
    "banks-server",
    "bench-streamer",
    "bench-tps",
    "bloom",
    "bucket_map",
    "cargo-registry",
    "clap-utils",
    "clap-v3-utils",
    "cli",
    "cli-config",
    "cli-output",
    "client",
    "client-test",
    "connection-cache",
    "core",
    "cost-model",
    "dos",
    "download-utils",
    "entry",
    "faucet",
    "frozen-abi",
    "frozen-abi/macro",
    "genesis",
    "genesis-utils",
    "geyser-plugin-interface",
    "geyser-plugin-manager",
    "gossip",
    "install",
    "keygen",
    "ledger",
    "ledger-tool",
    "local-cluster",
    "log-analyzer",
    "logger",
    "measure",
    "memory-management",
    "merkle-root-bench",
    "merkle-tree",
    "metrics",
    "net-shaper",
    "net-utils",
    "notifier",
    "perf",
    "poh",
    "poh-bench",
    "program-runtime",
    "program-test",
    "programs/address-lookup-table",
    "programs/address-lookup-table-tests",
    "programs/bpf-loader-tests",
    "programs/bpf_loader",
    "programs/bpf_loader/gen-syscall-list",
    "programs/compute-budget",
    "programs/config",
    "programs/ed25519-tests",
    "programs/loader-v4",
    "programs/stake",
    "programs/system",
    "programs/vote",
    "programs/zk-token-proof",
    "programs/zk-token-proof-tests",
    "pubsub-client",
    "quic-client",
    "rayon-threadlimit",
    "rbpf-cli",
    "remote-wallet",
    "rpc",
    "rpc-client",
    "rpc-client-api",
    "rpc-client-nonce-utils",
    "rpc-test",
    "runtime",
    "runtime-transaction",
    "sdk",
    "sdk/cargo-build-bpf",
    "sdk/cargo-build-sbf",
    "sdk/cargo-test-bpf",
    "sdk/cargo-test-sbf",
    "sdk/gen-headers",
    "sdk/macro",
    "sdk/program",
    "send-transaction-service",
    "stake-accounts",
    "storage-bigtable",
    "storage-bigtable/build-proto",
    "storage-proto",
    "streamer",
    "test-validator",
    "thin-client",
    "tokens",
    "tpu-client",
    "transaction-dos",
    "transaction-status",
    "turbine",
    "udp-client",
    "unified-scheduler-logic",
    "unified-scheduler-pool",
    "upload-perf",
    "validator",
    "version",
    "vote",
    "watchtower",
    "wen-restart",
    "zk-keygen",
    "zk-token-sdk",
]

exclude = ["programs/sbf"]

# This prevents a Travis CI error when building for Windows.
resolver = "2"

[workspace.package]
version = ""
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana"
homepage = "https://solanalabs.com/"
license = "Apache-2.0"
edition = "2021"

[workspace.dependencies]
Inflector = "0.11.4"
aquamarine = "0.3.3"
aes-gcm-siv = "0.10.3"
ahash = "0.8.7"
anyhow = "1.0.79"
ark-bn254 = "0.4.0"
ark-ec = "0.4.0"
ark-ff = "0.4.0"
ark-serialize = "0.4.0"
array-bytes = "=1.4.1"
arrayref = "0.3.7"
assert_cmd = "2.0"
assert_matches = "1.5.0"
async-channel = "1.9.0"
async-mutex = "1.4.0"
async-trait = "0.1.77"
atty = "0.2.11"
backoff = "0.4.0"
base64 = "0.21.7"
bincode = "1.3.3"
bitflags = { version = ""] }
blake3 = "1.5.0"
block-buffer = "0.10.4"
borsh = { version = ""] }
bs58 = "0.4.0"
bv = "0.11.1"
byte-unit = "4.0.19"
bytecount = "0.6.7"
bytemuck = "1.14.0"
byteorder = "1.5.0"
bytes = "1.5"
bzip2 = "0.4.4"
caps = "0.5.5"
cargo_metadata = "0.15.4"
cc = "1.0.83"
chrono = { version = "", default-features = false }
chrono-humanize = "0.2.3"
clap = "2.33.1"
console = "0.15.8"
console_error_panic_hook = "0.1.7"
console_log = "0.2.2"
const_format = "0.2.32"
core_affinity = "0.5.10"
criterion = "0.5.1"
criterion-stats = "0.3.0"
crossbeam-channel = "0.5.11"
csv = "1.3.0"
ctrlc = "3.4.2"
curve25519-dalek = "3.2.1"
dashmap = "5.5.3"
derivation-path = { version = "", default-features = false }
dialoguer = "0.10.4"
digest = "0.10.7"
dir-diff = "0.3.3"
dirs-next = "2.0.0"
dlopen2 = "0.5.0"
eager = "0.1.0"
ed25519-dalek = "=1.0.1"
ed25519-dalek-bip32 = "0.2.0"
either = "1.9.0"
enum-iterator = "1.5.0"
env_logger = "0.9.3"
etcd-client = "0.11.1"
fast-math = "0.1"
fd-lock = "3.0.13"
flate2 = "1.0.28"
fnv = "1.0.7"
fs_extra = "1.3.0"
futures = "0.3.30"
futures-util = "0.3.29"
gag = "1.0.0"
generic-array = { version = "", default-features = false }
gethostname = "0.2.3"
getrandom = "0.2.10"
goauth = "0.13.1"
hex = "0.4.3"
hidapi = { version = "", default-features = false }
histogram = "0.6.9"
hmac = "0.12.1"
http = "0.2.11"
humantime = "2.0.1"
hyper = "0.14.28"
hyper-proxy = "0.9.1"
im = "15.1.0"
index_list = "0.2.11"
indexmap = "2.1.0"
indicatif = "0.17.7"
itertools = "0.10.5"
jemallocator = { package = "tikv-jemallocator", version = "", features = [
    "unprefixed_malloc_on_supported_platforms",
] }
js-sys = "0.3.67"
json5 = "0.4.1"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-http-server = "18.0.0"
jsonrpc-ipc-server = "18.0.0"
jsonrpc-pubsub = "18.0.0"
jsonrpc-server-utils = "18.0.0"
lazy_static = "1.4.0"
libc = "0.2.152"
libloading = "0.7.4"
libsecp256k1 = "0.6.0"
light-poseidon = "0.2.0"
log = "0.4.20"
lru = "0.7.7"
lz4 = "1.24.0"
memmap2 = "0.5.10"
memoffset = "0.9"
merlin = "3"
min-max-heap = "1.3.0"
mockall = "0.11.4"
modular-bitfield = "0.11.2"
nix = "0.26.4"
num-bigint = "0.4.4"
num-derive = "0.4"
num-traits = "0.2"
num_cpus = "1.16.0"
num_enum = "0.7.2"
openssl = "0.10"
ouroboros = "0.15.6"
parking_lot = "0.12"
pbkdf2 = { version = "", default-features = false }
pem = "1.1.1"
percentage = "0.1.0"
pickledb = { version = "", default-features = false }
pkcs8 = "0.8.0"
predicates = "2.1"
pretty-hex = "0.3.0"
prio-graph = "0.2.1"
proc-macro2 = "1.0.78"
proptest = "1.4"
prost = "0.11.9"
prost-build = "0.11.9"
prost-types = "0.11.9"
protobuf-src = "1.1.0"
qstring = "0.7.2"
qualifier_attr = { version = "", default-features = false }
quinn = "0.10.2"
quinn-proto = "0.10.6"
quote = "1.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
raptorq = "1.8.0"
rayon = "1.8.1"
rcgen = "0.10.0"
reed-solomon-erasure = "6.0.0"
regex = "1.10.3"
reqwest = { version = "", default-features = false }
rolling-file = "0.2.0"
rpassword = "7.3"
rustc_version = ""
rustls = { version = ""] }
rustversion = ""
scopeguard = "1.2.0"
semver = "1.0.21"
seqlock = "0.2.0"
serde = "1.0.195"
serde_bytes = "0.11.14"
serde_derive = "1.0.103"
serde_json = "1.0.111"
serde_with = { version = "", default-features = false }
serde_yaml = "0.9.30"
serial_test = "2.0.0"
sha2 = "0.10.8"
sha3 = "0.10.4"
signal-hook = "0.3.17"
siphasher = "0.3.11"
smallvec = "1.13.1"
smpl_jwt = "0.7.1"
socket2 = "0.5.5"
soketto = "0.7"
solana-account-decoder = { path = "account-decoder", version = "" }
solana-accounts-db = { path = "accounts-db", version = "" }
solana-address-lookup-table-program = { path = "programs/address-lookup-table", version = "" }
solana-banks-client = { path = "banks-client", version = "" }
solana-banks-interface = { path = "banks-interface", version = "" }
solana-banks-server = { path = "banks-server", version = "" }
solana-bench-tps = { path = "bench-tps", version = "" }
solana-bloom = { path = "bloom", version = "" }
solana-bpf-loader-program = { path = "programs/bpf_loader", version = "" }
solana-bucket-map = { path = "bucket_map", version = "" }
solana-cargo-registry = { path = "cargo-registry", version = "" }
solana-clap-utils = { path = "clap-utils", version = "" }
solana-clap-v3-utils = { path = "clap-v3-utils", version = "" }
solana-cli = { path = "cli", version = "" }
solana-cli-config = { path = "cli-config", version = "" }
solana-cli-output = { path = "cli-output", version = "" }
solana-client = { path = "client", version = "" }
solana-compute-budget-program = { path = "programs/compute-budget", version = "" }
solana-config-program = { path = "programs/config", version = "" }
solana-connection-cache = { path = "connection-cache", version = "", default-features = false }
solana-core = { path = "core", version = "" }
solana-cost-model = { path = "cost-model", version = "" }
solana-download-utils = { path = "download-utils", version = "" }
solana-entry = { path = "entry", version = "" }
solana-faucet = { path = "faucet", version = "" }
solana-frozen-abi = { path = "frozen-abi", version = "" }
solana-frozen-abi-macro = { path = "frozen-abi/macro", version = "" }
solana-genesis = { path = "genesis", version = "" }
solana-genesis-utils = { path = "genesis-utils", version = "" }
solana-geyser-plugin-interface = { path = "geyser-plugin-interface", version = "" }
solana-geyser-plugin-manager = { path = "geyser-plugin-manager", version = "" }
solana-gossip = { path = "gossip", version = "" }
solana-ledger = { path = "ledger", version = "" }
solana-loader-v4-program = { path = "programs/loader-v4", version = "" }
solana-local-cluster = { path = "local-cluster", version = "" }
solana-logger = { path = "logger", version = "" }
solana-measure = { path = "measure", version = "" }
solana-merkle-tree = { path = "merkle-tree", version = "" }
solana-metrics = { path = "metrics", version = "" }
solana-net-utils = { path = "net-utils", version = "" }
solana-nohash-hasher = "0.2.1"
solana-notifier = { path = "notifier", version = "" }
solana-perf = { path = "perf", version = "" }
solana-poh = { path = "poh", version = "" }
solana-program = { path = "sdk/program", version = "=1.25.0" }
solana-program-runtime = { path = "program-runtime", version = "" }
solana-program-test = { path = "program-test", version = "" }
solana-pubsub-client = { path = "pubsub-client", version = "" }
solana-quic-client = { path = "quic-client", version = "" }
solana-rayon-threadlimit = { path = "rayon-threadlimit", version = "" }
solana-remote-wallet = { path = "remote-wallet", version = "", default-features = false }
solana-unified-scheduler-logic = { path = "unified-scheduler-logic", version = "" }
solana-unified-scheduler-pool = { path = "unified-scheduler-pool", version = "" }
solana-rpc = { path = "rpc", version = "" }
solana-rpc-client = { path = "rpc-client", version = "", default-features = false }
solana-rpc-client-api = { path = "rpc-client-api", version = "" }
solana-rpc-client-nonce-utils = { path = "rpc-client-nonce-utils", version = "" }
solana-runtime = { path = "runtime", version = "" }
solana-runtime-transaction = { path = "runtime-transaction", version = "" }
solana-sdk = { path = "sdk", version = "=1.25.0" }
solana-sdk-macro = { path = "sdk/macro", version = "" }
solana-send-transaction-service = { path = "send-transaction-service", version = "" }
solana-stake-program = { path = "programs/stake", version = "" }
solana-storage-bigtable = { path = "storage-bigtable", version = "" }
solana-storage-proto = { path = "storage-proto", version = "" }
solana-streamer = { path = "streamer", version = "" }
solana-system-program = { path = "programs/system", version = "" }
solana-test-validator = { path = "test-validator", version = "" }
solana-thin-client = { path = "thin-client", version = "" }
solana-tpu-client = { path = "tpu-client", version = "", default-features = false }
solana-transaction-status = { path = "transaction-status", version = "" }
solana-turbine = { path = "turbine", version = "" }
solana-udp-client = { path = "udp-client", version = "" }
solana-version = { path = "version", version = "" }
solana-vote = { path = "vote", version = "" }
solana-vote-program = { path = "programs/vote", version = "" }
solana-wen-restart = { path = "wen-restart", version = "" }
solana-zk-keygen = { path = "zk-keygen", version = "" }
solana-zk-token-proof-program = { path = "programs/zk-token-proof", version = "" }
solana-zk-token-sdk = { path = "zk-token-sdk", version = "=1.25.0" }
solana_rbpf = "=0.8.0"
spl-associated-token-account = "=2.3.0"
spl-instruction-padding = "0.1"
spl-memo = "=4.0.0"
spl-pod = "=0.1.0"
spl-token = "=4.0.0"
spl-token-2022 = "=1.0.0"
spl-token-group-interface = "=0.1.0"
spl-token-metadata-interface = "=0.2.0"
static_assertions = "1.1.0"
stream-cancel = "0.8.2"
strum = "0.24"
strum_macros = "0.24"
subtle = "2.4.1"
symlink = "0.1.0"
syn = "2.0"
sys-info = "0.9.1"
sysctl = "0.4.6"
systemstat = "0.2.3"
tar = "0.4.40"
tarpc = "0.29.0"
tempfile = "3.9.0"
test-case = "3.3.1"
thiserror = "1.0.56"
tiny-bip39 = "0.8.2"
# Update solana-tokio patch below when updating this version
tokio = "1.29.1"
tokio-serde = "0.8"
tokio-stream = "0.1.14"
tokio-tungstenite = "0.20.1"
tokio-util = "0.6"
toml = "0.8.8"
tonic = "0.9.2"
tonic-build = "0.9.2"
trees = "0.4.2"
tungstenite = "0.20.1"
uriparse = "0.6.4"
url = "2.5.0"
wasm-bindgen = "0.2"
winapi = "0.3.8"
winreg = "0.50"
x509-parser = "0.14.0"
# See "zeroize versioning issues" below if you are updating this version.
zeroize = { git = "https://github.com/hamkj7hpo/utils.git", branch = "safe-pump-compat", version = "", default-features = false }
zstd = "0.11.2"

[patch.crates-io]
# for details, see https://github.com/solana-labs/crossbeam/commit/fd279d707025f0e60951e429bf778b4813d1b6bf
crossbeam-epoch = { git = "https://github.com/solana-labs/crossbeam", rev = "fd279d707025f0e60951e429bf778b4813d1b6bf" }

# We include the following crates as our dependencies above from crates.io:
#
#  * spl-associated-token-account
#  * spl-instruction-padding
#  * spl-memo
#  * spl-pod
#  * spl-token
#  * spl-token-2022
#  * spl-token-metadata-interface
#
# They, in turn, depend on a number of crates that we also include directly
# using `path` specifications.  For example, `spl-token` depends on
# `solana-program`.  And we explicitly specify `solana-program` above as a local
# path dependency:
#
#     solana-program = { path = "../../sdk/program", version = "" }
#
# Unfortunately, Cargo will try to resolve the `spl-token` `solana-program`
# dependency only using what is available on crates.io.  Crates.io normally
# contains a previous version of these crates, and we end up with two versions
# of `solana-program` and `solana-zk-token-sdk` and all of their dependencies in
# our build tree.
#
# If you are developing downstream using non-crates-io solana-program (local or
# forked repo, or from github rev, eg), duplicate the following patch statements
# in your Cargo.toml. If you still hit duplicate-type errors with the patch
# statements in place, run `cargo update -p solana-program` and/or `cargo update
# -p solana-zk-token-sdk` to remove extraneous versions from your Cargo.lock
# file.
#
# There is a similar override in `programs/sbf/Cargo.toml`.  Please keep both
# comments and the overrides in sync.
solana-program = { path = "sdk/program" }
solana-zk-token-sdk = { path = "zk-token-sdk" }
#
# === zeroize versioning issues ===
#
# A number of packages used explicit upper bound on the `zeroize` package, such
# as `>=1, <1.4`.  The problem is that cargo still does not duplicate `zeroize`
# if a newer version is available and requested by another package and just
# fails the whole dependency resolution process.
#
# This is described in
#
# https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html#multiple-requirements
#
# So we have to patch `zeroize` dependency specifications in the projects that
# introduce these constraints.  They have already removed these constraints in
# newer versions, but we have not updated yet.  As we update, we need to remove
# these patch requests.
#
# When our dependencies are upgraded, we can remove these patches.  Before that
# we might need to maintain these patches in sync with our full dependency tree.

# Our dependency tree has `aes-gcm-siv` v0.10.3 and the `zeroize` restriction
# was removed in the next commit just after the release.  So it seems safe to
# patch to this commit.
#
# `aes-gcm-siv` v0.10.3 release:
#
# https://github.com/RustCrypto/AEADs/releases/tag/aes-gcm-siv-v0.10.3
#
# Corresponds to commit
#
# https://github.com/RustCrypto/AEADs/commit/6f16f4577a1fc839a2346cf8c5531c85a44bf5c0
#
# Comparison with `6105d7a5591aefa646a95d12b5e8d3f55a9214ef` pinned here:
#
# https://github.com/RustCrypto/AEADs/compare/aes-gcm-siv-v0.10.3..6105d7a5591aefa646a95d12b5e8d3f55a9214ef
#
[patch.crates-io.aes-gcm-siv]
git = "https://github.com/RustCrypto/AEADs"
rev = "6105d7a5591aefa646a95d12b5e8d3f55a9214ef"

# Our dependency tree has `curve25519-dalek` v3.2.1.  They have removed the
# constraint in the next major release. The commit that removes the `zeroize`
# constraint was added to multiple release branches, but not to the 3.2 branch.
#
# `curve25519-dalek` maintainers are saying they do not want to invest any more
# time in the 3.2 release:
#
# https://github.com/dalek-cryptography/curve25519-dalek/issues/452#issuecomment-1749809428
#
# So we have to fork and create our own release, based on v3.2.1, with the
# commit that removed `zeroize` constraint on the `main` branch cherry-picked on
# top.
#
# `curve25519-dalek` v3.2.1 release:
#
# https://github.com/dalek-cryptography/curve25519-dalek/releases/tag/3.2.1
#
# Corresponds to commit
#
# https://github.com/dalek-cryptography/curve25519-dalek/commit/29e5c29b0e5c6821e4586af58b0d0891dd2ec639
#
# Comparison with `b500cdc2a920cd5bff9e2dd974d7b97349d61464`:
#
# https://github.com/dalek-cryptography/curve25519-dalek/compare/3.2.1...solana-labs:curve25519-dalek:b500cdc2a920cd5bff9e2dd974d7b97349d61464
#
# Or, using the branch name instead of the hash:
#
# https://github.com/dalek-cryptography/curve25519-dalek/compare/3.2.1...solana-labs:curve25519-dalek:3.2.1-unpin-zeroize
#
[patch.crates-io.curve25519-dalek]
git = "https://github.com/solana-labs/curve25519-dalek.git"
rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464"

# Solana RPC nodes experience stalls when running with `tokio` containing this
# commit:
# https://github.com/tokio-rs/tokio/commit/4eed411519783ef6f58cbf74f886f91142b5cfa6
#
# Tokio maintainers believe performance degradation is due to application bugs:
# https://github.com/tokio-rs/tokio/issues/4873#issuecomment-1198277677
#
# This may indeed be true of the code in this monorepo, but we haven't yet
# identified the bug or a way to fix. As a stopgap, this patches `tokio` to the
# tagged version specified above with commit `4eed411` reverted.
#
# Comparison:
# https://github.com/tokio-rs/tokio/compare/tokio-1.29.1...solana-labs:solana-tokio:tokio-1.29.1-revert-4eed411
#
[patch.crates-io.tokio]
git = "https://github.com/solana-labs/solana-tokio.git"
rev = "7cf47705faacf7bf0e43e4131a5377b3291fce21"
