[package]
name = "solana-zk-token-sdk"
description = "Solana ZK Token SDK"
documentation = "https://docs.rs/solana-zk-token-sdk"
version = ""
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
base64 = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }
num-derive = { workspace = true }
num-traits = { workspace = true }
solana-program = { path = "../program", version = "" }

[dev-dependencies]
tiny-bip39 = { workspace = true }

[target.'cfg(not(target_os = "solana"))'.dependencies]
aes-gcm-siv = { workspace = true }
bincode = { workspace = true }
byteorder = { workspace = true }
curve25519-dalek = { workspace = true, features = ["serde"] }
getrandom = { version = ""] }
itertools = { workspace = true }
lazy_static = { workspace = true }
merlin = { workspace = true }
rand = { version = "" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha3 = "0.9"
solana-sdk = { path = "../sdk", version = "" }
subtle = { workspace = true }
thiserror = { workspace = true }
zeroize = { git = "https://github.com/hamkj7hpo/utils.git", branch = "safe-pump-compat", version = ""] }

[lib]
crate-type = ["cdylib", "rlib"]
