[package]
name = "solana-program"
description = "Solana Program"
documentation = "https://docs.rs/solana-program"
readme = "README.md"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
rust-version = "1.72.0"

[dependencies]
zeroize = { git = "https://github.com/hamkj7hpo/utils.git", branch = "safe-pump-compat", path = "zeroize", version = "1.3.0", features = ["alloc", "zeroize_derive"], optional = true }
curve25519-dalek = { git = "https://github.com/hamkj7hpo/curve25519-dalek.git", branch = "safe-pump-compat-v2", features = ["std", "serde"] }
bincode = { workspace = true }
blake3 = { workspace = true, features = ["digest", "traits-preview"] }
borsh = { workspace = true }
borsh0-10 = { package = "borsh", version = "0.10.3" }
borsh0-9 = { package = "borsh", version = "0.9.3" }
bs58 = { workspace = true }
bv = { workspace = true, features = ["serde"] }
bytemuck = { workspace = true, features = ["derive"] }
itertools = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
memoffset = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true, features = ["i128"] }
rustversion = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_bytes = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
solana-frozen-abi = { workspace = true }
solana-frozen-abi-macro = { workspace = true }
solana-sdk-macro = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(target_os = "solana")'.dependencies]
getrandom = { version = "0.2.15", features = ["custom"] }

[target.'cfg(not(target_os = "solana"))'.dependencies]
ark-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-serialize = { workspace = true }
base64 = { workspace = true, features = ["alloc", "std"] }
bitflags = { workspace = true }
itertools = { workspace = true }
libc = { workspace = true, features = ["extra_traits"] }
libsecp256k1 = { workspace = true }
light-poseidon = { workspace = true }
num-bigint = { workspace = true }
rand = { workspace = true }
tiny-bip39 = { version = "0.8.0" }
wasm-bindgen = { workspace = true }

[target.'cfg(not(target_os = "solana"))'.dev-dependencies]
solana-logger = { workspace = true }

[target.'cfg(target_arch = wasm32)'.dependencies]
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
getrandom = { version = "0.2.15", features = ["custom"] }
js-sys = { workspace = true }

[target.'cfg(not(target_pointer_width = "64"))'.dependencies]
parking_lot = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
array-bytes = { workspace = true }
assert_matches = { workspace = true }
serde_json = { workspace = true }
static_assertions = { workspace = true }

[build-dependencies]
rustc_version = { workspace = true }

[target.'cfg(any(unix, windows))'.build-dependencies]
cc = { workspace = true, features = ["jobserver", "parallel"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
zeroize = ["dep:zeroize"]
default = []

